Renamed WorkflowDefinition to Workflow and Workflow is WorkflowRunner now.

--- a/src/SimpleFlow/SimpleFlow.Core.csproj
+++ b/src/SimpleFlow/SimpleFlow.Core.csproj
@@ -56,17 +56,18 @@
     <Compile Include="InMemoryWorkItemRepository.cs" />
     <Compile Include="ParallelBlock.cs" />
     <Compile Include="StateMachineProvider.cs" />
-    <Compile Include="Workflow.cs" />
+    <Compile Include="Assembler.cs" />
     <Compile Include="WorkflowPathNavigator.cs" />
     <Compile Include="ForkBlock.cs" />
     <Compile Include="ForkStateMachine.cs" />
     <Compile Include="IStateMachine.cs" />
     <Compile Include="SequenceStateMachine.cs" />
+    <Compile Include="WorkflowRunner.cs" />
     <Compile Include="WorkflowType.cs" />
     <Compile Include="WorkItemBuilder.cs" />
     <Compile Include="WorkItemRepository.cs" />
     <Compile Include="SequenceBlock.cs" />
-    <Compile Include="WorkflowDefinition.cs" />
+    <Compile Include="Workflow.cs" />
     <Compile Include="WorkflowBlock.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WorkflowJob.cs" />
