--- a/src/SimpleFlow.Fluent/SimpleFlow.Fluent.csproj
+++ b/src/SimpleFlow.Fluent/SimpleFlow.Fluent.csproj
@@ -45,7 +45,7 @@
     <Compile Include="Input.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sequence.cs" />
-    <Compile Include="WorkflowBuilder.cs" />
+    <Compile Include="Workflow.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SimpleFlow\SimpleFlow.Core.csproj">
