Created activity state machine and moved state transition logic in state queue to avoid multiple invoke.

--- a/src/SimpleFlow/SimpleFlow.Core.csproj
+++ b/src/SimpleFlow/SimpleFlow.Core.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="ActivityBlock.cs" />
     <Compile Include="ActivityRunner.cs" />
+    <Compile Include="ActivityStateMachine.cs" />
     <Compile Include="Engine.cs" />
     <Compile Include="DataStore.cs" />
     <Compile Include="ExceptionStateMachine.cs" />
