--- a/tests/SimpleFlow.Tests/SimpleFlow.Tests.csproj
+++ b/tests/SimpleFlow.Tests/SimpleFlow.Tests.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Core\ForkStateMachineTests.cs" />
     <Compile Include="Core\RetryStateMachineTests.cs" />
     <Compile Include="Fluent\CatchTests.cs" />
+    <Compile Include="Fluent\RetryTests.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="Core\InMemoryDataStoreTests.cs" />
     <Compile Include="Core\InMemoryWorkItemRepositoryTests.cs" />
