--- a/src/SimpleFlow.Fluent/SimpleFlow.Fluent.csproj
+++ b/src/SimpleFlow.Fluent/SimpleFlow.Fluent.csproj
@@ -40,7 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Parallel.cs" />
-    <Compile Include="FluentFlow.cs" />
+    <Compile Include="Flow.cs" />
     <Compile Include="Fork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sequence.cs" />
